# TravelManage.SpecDD.BasisofSE

./: .gitignore  DESIGN_DETAIL.MD  README.md  TECHNIC_DESIGN.md  actions.md
.github/workflows/: spec-test.yml
backend/: .coveragerc  .env.example  .pylintrc  _test_flow.py  auth.py  database.py  deps.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_profiled.py  schemas.py  tasks_scheduler.py  test_new_features.py
backend/exports/: finance_2026-06-06.csv
backend/routers/: applications.py  auth.py  dashboard.py  groups.py  routes.py  tasks.py
backend/services/: application.py  export.py  pdf_generator.py  pricing.py
backend/tests/: conftest.py  test_application_service.py  test_applications.py  test_auth_service.py  test_base.py  test_cancellation_service.py  test_cancellations.py  test_coverage_infra.py  test_coverage_routers.py  test_dashboard_service.py  test_export_service.py  test_group_service.py  test_groups.py  test_payment_service.py  test_payments.py  test_pricing.py  test_pricing_service.py  test_route_service.py
backend/travel_management_backend.egg-info/: SOURCES.txt  requires.txt  top_level.txt
doc/: 00_REQUIREMENT.MD  00_SPEC_PROCESS.MD  01_INSTANTIATION.MD  02_DESGoFEATlangCN.MD  02_FEATUREwithNOTES.MD  03_TEST_EXECUTIONREPORT.MD  03_TEST_SKELETONMAP.MD  04_TEST_WORKINGPROCESS.MD  05_API_CONTRACT.MD  06_LIVING_DOCUMENTATION.MD  07_TEST_DESIGN.md
features/: applications.feature  cancellations.feature  groups.feature  payments.feature  pricing.feature
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  api.test.ts  api.ts  auth.test.tsx  auth.tsx  main.tsx  types.ts  utils.test.ts  utils.ts
frontend/src/pages/: AdminGroups.css  AdminGroups.tsx  AdminRoutes.tsx  AppDetail.css  AppDetail.tsx  ApplyCreate.css  ApplyCreate.tsx  ApplyWizard.tsx  DailyTasks.tsx  GroupList.tsx  HelpPage.tsx  HomePage.tsx  Login.tsx  UserManagement.tsx  UserProfile.tsx
frontend/src/utils/: FeeCalculator.ts
share/: profiled_all.txt  profiled_before.txt  protocal.md  protocal.ts  华为云码道2026-06-06.md  测试结果分析.md
