[project]
name = "travel-management-backend"
version = "0.1.0"
description = "旅游业务管理系统后端"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.40.0",
    "sqlalchemy==2.0.48",
    "pydantic==2.13.3",
    "apscheduler==3.11.2",
    "python-multipart==0.0.27",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "psycopg[binary]>=3.3.4",
    "reportlab>=4.2.0",
    "PyPDF2>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-bdd>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]
