[project]
name = "travel-management-backend"
version = "0.1.0"
description = "旅游业务管理系统后端"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.40.0",
    "sqlalchemy==2.0.48",
    "pydantic==2.13.3",
    "apscheduler==3.11.2",
    "python-multipart==0.0.27",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "psycopg[binary]>=3.3.4",
    "reportlab>=4.2.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-bdd>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.19.0",
    "freezegun>=1.5.5",
    "coverage>=7.14.1",
    "allure-pytest>=2.0.0",
    "ruff>=0.11.2",
    "pylint>=3.3.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "ARG", "PL"]
ignore = [
    "E501",      # line-too-long — 由 ruff format 处理
    "SIM114",    # 允许 if/elif 模式重复
    "PLR2004",   # 允许魔法数字
    "ARG001",    # 允许未使用的函数参数（FastAPI 依赖注入常见）
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101"]
"routers/*" = ["ARG001"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]
